# Benzene

./: .gitignore  CMakeLists.txt  CMakePresets.json
benzene/: logger.cpp  logger.h
benzene/alpha/: element.cpp  element.h
benzeneSUT/: CMakeLists.txt  main.cpp
benzeneSUT/src/: main.cpp
